# open-cfxmine

./: CMakeLists.txt  README.md
src/: AbstractMiner.h  OctopusCPUMiner.cc  OctopusCPUMiner.h  OctopusCUDAMiner.cu  OctopusCUDAMiner.h  StratumClient.cc  StratumClient.h  fnv.h  hex.h  light.cc  light.h  main.cc  octopus_params.h  octopus_structs.h  sha3.cc  sha3.h  siphash.h
src/cuda/: common.h  cuda_helper.cuh  fnv.cuh  globals.cuh  keccak.cuh  octopus.cuh  params.cuh  precomputation.h  siphash.cuh  structs.cuh
